# Real-Time-ML-System

./: .dockerignore  .gitattributes  .gitignore  README.md  pyproject.toml  setup.py
docker-compose/: Makefile  news-signal-historical.yml  news-signal-live.yml  redpanda.yml  technical-indicators-historical.yml  technical-indicators-live.yml  technical-indicators-pipeline.yml
services/candles/: Dockerfile  config.py  historical.settings.env  pyproject.toml  run.py  settings.env
services/news/: Dockerfile  Makefile  config.py  historical.settings.env  historical_data_source.py  news_downloader.py  pyproject.toml  requirements.txt  run.py  settings.env  setup.py
services/news-signal/: Dockerfile  Makefile  anthropic_credentials.env  config.py  fine_tuning.py  fune_tuning.py  golden-dataset.py  live.settings.env  pyproject.toml  run.py  settings.env
services/news-signal/data/: golden_dataset_anthropic.jsonl  golden_dataset_ollama.jsonl
services/news-signal/llm/: base.py  claude.py
services/news-signal/llms/: base.py  claude.py  config.py  dummy.py  factory.py  ollama.py
services/news-signal_old/: Dockerfile  golden-dataset.py  pyproject.toml
services/news-signal_old/data/: golden_dataset_anthropic.jsonl
services/news-signal_old/llms/: base.py  ollama.py
services/news/sources/: __init__.py  factory.py  news.py  (+3 more)
services/price-predictor/: Makefile  config.py  feature_reader.py  pyproject.toml  training.py  training.settings.env  traininig_settings.env  xgboost_model.joblib
services/price-predictor/models/: dummy_model.py  xgboost_model.py
services/technical-indicators/: Dockerfile  candle.py  config.py  historical.settings.env  live.settings.news-signal.env  pyproject.toml  run.py  settings.env  technical_indicators.py
services/to-feature-store/: Dockerfile  README.md  config.py  creedentials.env  historical.settings.env  historical.settings.technical-indicators.env  hopsworks_credentials.env  live.settings.env  live.settings.news-signal.env  pyproject.toml  run.py  settings.env  sinks.py
services/to-features-store/: Dockerfile  Makefile  config.py  pyproject.toml  run.py  sinks.py
services/trades/: Dockerfile  Makefile  config.py  historical.settings.env  multistage.Dockerfile  pyproject.toml  run.py
sessions/: session_3.md
(+3 files in other folders)
