[project]
name = "news-signal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "comet-ml>=3.47.6",
    "datasets>=3.2.0",
    "fire>=0.7.0",
    "loguru>=0.7.3",
    "scikit-learn>=1.6.1",
    "setuptools>=75.8.0",
    "unsloth>=2025.1.5",
]

[tool.setuptools]
packages = ["news_signal"]
